re PR rtl-optimization/33148 (ICE in trunc_int_for_mode, at explow.c:56 during combine)

PR rtl-optimization/33148
	* simplify-rtx.c (simplify_unary_operation_1): Only optimize
	(neg (lt X 0)) if X has scalar int mode.

	* gcc.c-torture/compile/20070827-1.c: New test.

From-SVN: r127959